--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@neondatabase/serverless": "^0.9.0",
     "concurrently": "^8.2.2",
+    "dotenv": "^16.5.0",
     "express": "^4.18.3",
     "framer-motion": "^11.1.5",
     "lucide-react": "^0.344.0",
