--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "openai": "^4.28.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "@netlify/functions": "^3.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
